Phase2/inputparser.output
Terminals unused in grammar

   number_error
   square_bracket_left
   square_bracket_right
   curly_brace_left
   curly_brace_right
   parenthesis_left
   parenthesis_right
   semicolon
   comma
   colon
   dot
   plus_assign
   minus_assign
   multiply_assign
   divide_assign
   question_mark
   modulo
   division
   multiply
   minus
   plus
   assignment
   Fake_id
   WhiteSpace


Grammar

    0 $accept: program $end

    1 program: declarationList

    2 declarationList: declarationList declaration
    3                | declaration

    4 declaration: varDeclaration
    5            | funDeclaration
    6            | recDeclaration

    7 recDeclaration: RECORD ID '{' localDeclarations '}'

    8 varDeclaration: typeSpecifier varDeclList ';'

    9 scopedVarDeclaration: scopedTypeSpecifier varDeclList ';'

   10 varDeclList: varDeclList ',' varDeclInitialize
   11            | varDeclInitialize

   12 varDeclInitialize: varDeclId
   13                  | varDeclId ':' simpleExpression

   14 varDeclId: ID
   15          | ID '[' NUMCONST ']'

   16 scopedTypeSpecifier: Static typeSpecifier
   17                    | typeSpecifier

   18 typeSpecifier: returnTypeSpecifier

   19 returnTypeSpecifier: INT
   20                    | REAL
   21                    | BOOL
   22                    | CHAR

   23 funDeclaration: typeSpecifier ID '(' params ')' statement
   24               | ID '(' params ')' statement

   25 params: paramList
   26       | /* empty */

   27 paramList: paramList ';' paramTypeList
   28          | paramTypeList

   29 paramTypeList: typeSpecifier paramIdList

   30 paramIdList: paramIdList ',' paramId
   31            | paramId

   32 paramId: ID
   33        | ID '[' ']'

   34 statement: expressionStmt
   35          | compoundStmt
   36          | selectionStmt
   37          | iterationStmt
   38          | returnStmt
   39          | breakStmt

   40 compoundStmt: '{' localDeclarations statementList '}'

   41 localDeclarations: localDeclarations scopedVarDeclaration
   42                  | /* empty */

   43 statementList: statementList statement
   44              | /* empty */

   45 expressionStmt: expression ';'
   46               | ';'

   47 selectionStmt: IF '(' simpleExpression ')' statement
   48              | IF '(' simpleExpression ')' statement ELSE statement
   49              | SWITCH '(' simpleExpression ')' caseElement defaultElement END

   50 caseElement: CASE NUMCONST ':' statement ';'
   51            | caseElement CASE NUMCONST ':' statement ';'

   52 defaultElement: DEFAULT ':' statement ';'
   53               | /* empty */

   54 iterationStmt: WHILE '(' simpleExpression ')' statement

   55 returnStmt: RETURN ';'
   56           | RETURN expression ';'

   57 breakStmt: BREAK ';'

   58 expression: mutable '=' expression
   59           | mutable "+=" expression
   60           | mutable "-=" expression
   61           | mutable "*=" expression
   62           | mutable "/=" expression
   63           | mutable "++"
   64           | mutable "--"
   65           | simpleExpression

   66 simpleExpression: simpleExpression OR simpleExpression
   67                 | simpleExpression AND simpleExpression
   68                 | simpleExpression OR_ELSE simpleExpression
   69                 | simpleExpression AND_THEN simpleExpression
   70                 | NOT simpleExpression
   71                 | relExpression

   72 relExpression: mathlogicExpression relop mathlogicExpression
   73              | mathlogicExpression

   74 relop: less_equal
   75      | less_than
   76      | greater_than
   77      | greater_equal
   78      | equal
   79      | not_equal

   80 mathlogicExpression: mathlogicExpression '+' mathlogicExpression
   81                    | mathlogicExpression '-' mathlogicExpression
   82                    | mathlogicExpression '*' mathlogicExpression
   83                    | mathlogicExpression '/' mathlogicExpression
   84                    | mathlogicExpression '%' mathlogicExpression
   85                    | unaryExpression

   86 unaryExpression: unaryop unaryExpression
   87                | factor

   88 unaryop: '-'
   89        | '*'
   90        | '?'

   91 factor: immutable
   92       | mutable

   93 mutable: ID
   94        | mutable '[' expression ']'
   95        | mutable '.' ID

   96 immutable: '(' expression ')'
   97          | call
   98          | constant

   99 call: ID '(' args ')'

  100 args: argList
  101     | /* empty */

  102 argList: argList ',' expression
  103        | expression

  104 constant: NUMCONST
  105         | Real_const
  106         | CHARCONST
  107         | BoolConst


Terminals, with rules where they appear

$end (0) 0
'%' (37) 84
'(' (40) 23 24 47 48 49 54 96 99
')' (41) 23 24 47 48 49 54 96 99
'*' (42) 82 89
'+' (43) 80
',' (44) 10 30 102
'-' (45) 81 88
'.' (46) 95
'/' (47) 83
':' (58) 13 50 51 52
';' (59) 8 9 27 45 46 50 51 52 55 56 57
'=' (61) 58
'?' (63) 90
'[' (91) 15 33 94
']' (93) 15 33 94
'{' (123) 7 40
'}' (125) 7 40
error (256)
Real_const (258) 105
number_error (259)
BoolConst (260) 107
greater_than (261) 76
greater_equal (262) 77
not_equal (263) 79
equal (264) 78
less_equal (265) 74
less_than (266) 75
square_bracket_left (267)
square_bracket_right (268)
curly_brace_left (269)
curly_brace_right (270)
parenthesis_left (271)
parenthesis_right (272)
semicolon (273)
comma (274)
colon (275)
dot (276)
AND_THEN (277) 69
OR_ELSE (278) 68
OR (279) 66
AND (280) 67
NOT (281) 70
IF (282) 47 48
ELSE (283) 48
SWITCH (284) 49
END (285) 49
CASE (286) 50 51
DEFAULT (287) 52
WHILE (288) 54
RETURN (289) 55 56
BREAK (290) 57
RECORD (291) 7
Static (292) 16
INT (293) 19
REAL (294) 20
BOOL (295) 21
CHAR (296) 22
plus_assign (297)
minus_assign (298)
multiply_assign (299)
divide_assign (300)
question_mark (301)
modulo (302)
division (303)
multiply (304)
minus (305)
plus (306)
assignment (307)
NUMCONST (308) 15 50 51 104
ID (309) 7 14 15 23 24 32 33 93 95 99
Fake_id (310)
WhiteSpace (311)
CHARCONST (312) 106
THEN (313)
"+=" (314) 59
"-=" (315) 60
"*=" (316) 61
"/=" (317) 62
"++" (318) 63
"--" (319) 64


Nonterminals, with rules where they appear

$accept (82)
    on left: 0
program (83)
    on left: 1, on right: 0
declarationList (84)
    on left: 2 3, on right: 1 2
declaration (85)
    on left: 4 5 6, on right: 2 3
recDeclaration (86)
    on left: 7, on right: 6
varDeclaration (87)
    on left: 8, on right: 4
scopedVarDeclaration (88)
    on left: 9, on right: 41
varDeclList (89)
    on left: 10 11, on right: 8 9 10
varDeclInitialize (90)
    on left: 12 13, on right: 10 11
varDeclId (91)
    on left: 14 15, on right: 12 13
scopedTypeSpecifier (92)
    on left: 16 17, on right: 9
typeSpecifier (93)
    on left: 18, on right: 8 16 17 23 29
returnTypeSpecifier (94)
    on left: 19 20 21 22, on right: 18
funDeclaration (95)
    on left: 23 24, on right: 5
params (96)
    on left: 25 26, on right: 23 24
paramList (97)
    on left: 27 28, on right: 25 27
paramTypeList (98)
    on left: 29, on right: 27 28
paramIdList (99)
    on left: 30 31, on right: 29 30
paramId (100)
    on left: 32 33, on right: 30 31
statement (101)
    on left: 34 35 36 37 38 39, on right: 23 24 43 47 48 50 51 52 54
compoundStmt (102)
    on left: 40, on right: 35
localDeclarations (103)
    on left: 41 42, on right: 7 40 41
statementList (104)
    on left: 43 44, on right: 40 43
expressionStmt (105)
    on left: 45 46, on right: 34
selectionStmt (106)
    on left: 47 48 49, on right: 36
caseElement (107)
    on left: 50 51, on right: 49 51
defaultElement (108)
    on left: 52 53, on right: 49
iterationStmt (109)
    on left: 54, on right: 37
returnStmt (110)
    on left: 55 56, on right: 38
breakStmt (111)
    on left: 57, on right: 39
expression (112)
    on left: 58 59 60 61 62 63 64 65, on right: 45 56 58 59 60 61 62
    94 96 102 103
simpleExpression (113)
    on left: 66 67 68 69 70 71, on right: 13 47 48 49 54 65 66 67 68
    69 70
relExpression (114)
    on left: 72 73, on right: 71
relop (115)
    on left: 74 75 76 77 78 79, on right: 72
mathlogicExpression (116)
    on left: 80 81 82 83 84 85, on right: 72 73 80 81 82 83 84
unaryExpression (117)
    on left: 86 87, on right: 85 86
unaryop (118)
    on left: 88 89 90, on right: 86
factor (119)
    on left: 91 92, on right: 87
mutable (120)
    on left: 93 94 95, on right: 58 59 60 61 62 63 64 92 94 95
immutable (121)
    on left: 96 97 98, on right: 91
call (122)
    on left: 99, on right: 97
args (123)
    on left: 100 101, on right: 99
argList (124)
    on left: 102 103, on right: 100 102
constant (125)
    on left: 104 105 106 107, on right: 98


state 0

    0 $accept: . program $end

    RECORD  shift, and go to state 1
    INT     shift, and go to state 2
    REAL    shift, and go to state 3
    BOOL    shift, and go to state 4
    CHAR    shift, and go to state 5
    ID      shift, and go to state 6

    program              go to state 7
    declarationList      go to state 8
    declaration          go to state 9
    recDeclaration       go to state 10
    varDeclaration       go to state 11
    typeSpecifier        go to state 12
    returnTypeSpecifier  go to state 13
    funDeclaration       go to state 14


state 1

    7 recDeclaration: RECORD . ID '{' localDeclarations '}'

    ID  shift, and go to state 15


state 2

   19 returnTypeSpecifier: INT .

    $default  reduce using rule 19 (returnTypeSpecifier)


state 3

   20 returnTypeSpecifier: REAL .

    $default  reduce using rule 20 (returnTypeSpecifier)


state 4

   21 returnTypeSpecifier: BOOL .

    $default  reduce using rule 21 (returnTypeSpecifier)


state 5

   22 returnTypeSpecifier: CHAR .

    $default  reduce using rule 22 (returnTypeSpecifier)


state 6

   24 funDeclaration: ID . '(' params ')' statement

    '('  shift, and go to state 16


state 7

    0 $accept: program . $end

    $end  shift, and go to state 17


state 8

    1 program: declarationList .
    2 declarationList: declarationList . declaration

    RECORD  shift, and go to state 1
    INT     shift, and go to state 2
    REAL    shift, and go to state 3
    BOOL    shift, and go to state 4
    CHAR    shift, and go to state 5
    ID      shift, and go to state 6

    $default  reduce using rule 1 (program)

    declaration          go to state 18
    recDeclaration       go to state 10
    varDeclaration       go to state 11
    typeSpecifier        go to state 12
    returnTypeSpecifier  go to state 13
    funDeclaration       go to state 14


state 9

    3 declarationList: declaration .

    $default  reduce using rule 3 (declarationList)


state 10

    6 declaration: recDeclaration .

    $default  reduce using rule 6 (declaration)


state 11

    4 declaration: varDeclaration .

    $default  reduce using rule 4 (declaration)


state 12

    8 varDeclaration: typeSpecifier . varDeclList ';'
   23 funDeclaration: typeSpecifier . ID '(' params ')' statement

    ID  shift, and go to state 19

    varDeclList        go to state 20
    varDeclInitialize  go to state 21
    varDeclId          go to state 22


state 13

   18 typeSpecifier: returnTypeSpecifier .

    $default  reduce using rule 18 (typeSpecifier)


state 14

    5 declaration: funDeclaration .

    $default  reduce using rule 5 (declaration)


state 15

    7 recDeclaration: RECORD ID . '{' localDeclarations '}'

    '{'  shift, and go to state 23


state 16

   24 funDeclaration: ID '(' . params ')' statement

    INT   shift, and go to state 2
    REAL  shift, and go to state 3
    BOOL  shift, and go to state 4
    CHAR  shift, and go to state 5

    $default  reduce using rule 26 (params)

    typeSpecifier        go to state 24
    returnTypeSpecifier  go to state 13
    params               go to state 25
    paramList            go to state 26
    paramTypeList        go to state 27


state 17

    0 $accept: program $end .

    $default  accept


state 18

    2 declarationList: declarationList declaration .

    $default  reduce using rule 2 (declarationList)


state 19

   14 varDeclId: ID .
   15          | ID . '[' NUMCONST ']'
   23 funDeclaration: typeSpecifier ID . '(' params ')' statement

    '['  shift, and go to state 28
    '('  shift, and go to state 29

    $default  reduce using rule 14 (varDeclId)


state 20

    8 varDeclaration: typeSpecifier varDeclList . ';'
   10 varDeclList: varDeclList . ',' varDeclInitialize

    ';'  shift, and go to state 30
    ','  shift, and go to state 31


state 21

   11 varDeclList: varDeclInitialize .

    $default  reduce using rule 11 (varDeclList)


state 22

   12 varDeclInitialize: varDeclId .
   13                  | varDeclId . ':' simpleExpression

    ':'  shift, and go to state 32

    $default  reduce using rule 12 (varDeclInitialize)


state 23

    7 recDeclaration: RECORD ID '{' . localDeclarations '}'

    $default  reduce using rule 42 (localDeclarations)

    localDeclarations  go to state 33


state 24

   29 paramTypeList: typeSpecifier . paramIdList

    ID  shift, and go to state 34

    paramIdList  go to state 35
    paramId      go to state 36


state 25

   24 funDeclaration: ID '(' params . ')' statement

    ')'  shift, and go to state 37


state 26

   25 params: paramList .
   27 paramList: paramList . ';' paramTypeList

    ';'  shift, and go to state 38

    $default  reduce using rule 25 (params)


state 27

   28 paramList: paramTypeList .

    $default  reduce using rule 28 (paramList)


state 28

   15 varDeclId: ID '[' . NUMCONST ']'

    NUMCONST  shift, and go to state 39


state 29

   23 funDeclaration: typeSpecifier ID '(' . params ')' statement

    INT   shift, and go to state 2
    REAL  shift, and go to state 3
    BOOL  shift, and go to state 4
    CHAR  shift, and go to state 5

    $default  reduce using rule 26 (params)

    typeSpecifier        go to state 24
    returnTypeSpecifier  go to state 13
    params               go to state 40
    paramList            go to state 26
    paramTypeList        go to state 27


state 30

    8 varDeclaration: typeSpecifier varDeclList ';' .

    $default  reduce using rule 8 (varDeclaration)


state 31

   10 varDeclList: varDeclList ',' . varDeclInitialize

    ID  shift, and go to state 41

    varDeclInitialize  go to state 42
    varDeclId          go to state 22


state 32

   13 varDeclInitialize: varDeclId ':' . simpleExpression

    Real_const  shift, and go to state 43
    BoolConst   shift, and go to state 44
    NOT         shift, and go to state 45
    NUMCONST    shift, and go to state 46
    ID          shift, and go to state 47
    CHARCONST   shift, and go to state 48
    '-'         shift, and go to state 49
    '*'         shift, and go to state 50
    '('         shift, and go to state 51
    '?'         shift, and go to state 52

    simpleExpression     go to state 53
    relExpression        go to state 54
    mathlogicExpression  go to state 55
    unaryExpression      go to state 56
    unaryop              go to state 57
    factor               go to state 58
    mutable              go to state 59
    immutable            go to state 60
    call                 go to state 61
    constant             go to state 62


state 33

    7 recDeclaration: RECORD ID '{' localDeclarations . '}'
   41 localDeclarations: localDeclarations . scopedVarDeclaration

    Static  shift, and go to state 63
    INT     shift, and go to state 2
    REAL    shift, and go to state 3
    BOOL    shift, and go to state 4
    CHAR    shift, and go to state 5
    '}'     shift, and go to state 64

    scopedVarDeclaration  go to state 65
    scopedTypeSpecifier   go to state 66
    typeSpecifier         go to state 67
    returnTypeSpecifier   go to state 13


state 34

   32 paramId: ID .
   33        | ID . '[' ']'

    '['  shift, and go to state 68

    $default  reduce using rule 32 (paramId)


state 35

   29 paramTypeList: typeSpecifier paramIdList .
   30 paramIdList: paramIdList . ',' paramId

    ','  shift, and go to state 69

    $default  reduce using rule 29 (paramTypeList)


state 36

   31 paramIdList: paramId .

    $default  reduce using rule 31 (paramIdList)


state 37

   24 funDeclaration: ID '(' params ')' . statement

    Real_const  shift, and go to state 43
    BoolConst   shift, and go to state 44
    NOT         shift, and go to state 45
    IF          shift, and go to state 70
    SWITCH      shift, and go to state 71
    WHILE       shift, and go to state 72
    RETURN      shift, and go to state 73
    BREAK       shift, and go to state 74
    NUMCONST    shift, and go to state 46
    ID          shift, and go to state 47
    CHARCONST   shift, and go to state 48
    '-'         shift, and go to state 49
    '*'         shift, and go to state 50
    '{'         shift, and go to state 75
    ';'         shift, and go to state 76
    '('         shift, and go to state 51
    '?'         shift, and go to state 52

    statement            go to state 77
    compoundStmt         go to state 78
    expressionStmt       go to state 79
    selectionStmt        go to state 80
    iterationStmt        go to state 81
    returnStmt           go to state 82
    breakStmt            go to state 83
    expression           go to state 84
    simpleExpression     go to state 85
    relExpression        go to state 54
    mathlogicExpression  go to state 55
    unaryExpression      go to state 56
    unaryop              go to state 57
    factor               go to state 58
    mutable              go to state 86
    immutable            go to state 60
    call                 go to state 61
    constant             go to state 62


state 38

   27 paramList: paramList ';' . paramTypeList

    INT   shift, and go to state 2
    REAL  shift, and go to state 3
    BOOL  shift, and go to state 4
    CHAR  shift, and go to state 5

    typeSpecifier        go to state 24
    returnTypeSpecifier  go to state 13
    paramTypeList        go to state 87


state 39

   15 varDeclId: ID '[' NUMCONST . ']'

    ']'  shift, and go to state 88


state 40

   23 funDeclaration: typeSpecifier ID '(' params . ')' statement

    ')'  shift, and go to state 89


state 41

   14 varDeclId: ID .
   15          | ID . '[' NUMCONST ']'

    '['  shift, and go to state 28

    $default  reduce using rule 14 (varDeclId)


state 42

   10 varDeclList: varDeclList ',' varDeclInitialize .

    $default  reduce using rule 10 (varDeclList)


state 43

  105 constant: Real_const .

    $default  reduce using rule 105 (constant)


state 44

  107 constant: BoolConst .

    $default  reduce using rule 107 (constant)


state 45

   70 simpleExpression: NOT . simpleExpression

    Real_const  shift, and go to state 43
    BoolConst   shift, and go to state 44
    NOT         shift, and go to state 45
    NUMCONST    shift, and go to state 46
    ID          shift, and go to state 47
    CHARCONST   shift, and go to state 48
    '-'         shift, and go to state 49
    '*'         shift, and go to state 50
    '('         shift, and go to state 51
    '?'         shift, and go to state 52

    simpleExpression     go to state 90
    relExpression        go to state 54
    mathlogicExpression  go to state 55
    unaryExpression      go to state 56
    unaryop              go to state 57
    factor               go to state 58
    mutable              go to state 59
    immutable            go to state 60
    call                 go to state 61
    constant             go to state 62


state 46

  104 constant: NUMCONST .

    $default  reduce using rule 104 (constant)


state 47

   93 mutable: ID .
   99 call: ID . '(' args ')'

    '('  shift, and go to state 91

    $default  reduce using rule 93 (mutable)


state 48

  106 constant: CHARCONST .

    $default  reduce using rule 106 (constant)


state 49

   88 unaryop: '-' .

    $default  reduce using rule 88 (unaryop)


state 50

   89 unaryop: '*' .

    $default  reduce using rule 89 (unaryop)


state 51

   96 immutable: '(' . expression ')'

    Real_const  shift, and go to state 43
    BoolConst   shift, and go to state 44
    NOT         shift, and go to state 45
    NUMCONST    shift, and go to state 46
    ID          shift, and go to state 47
    CHARCONST   shift, and go to state 48
    '-'         shift, and go to state 49
    '*'         shift, and go to state 50
    '('         shift, and go to state 51
    '?'         shift, and go to state 52
